image order on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,17 @@ img {
     max-width: 1148px;
 }
 
+@media only screen and (max-width: 767px) {
+    .mobile-order {
+       display: flex;
+    }
+
+    .mobile-order .mobile-second {
+        order: 2;
+    }
+}
+
+
 .bestWork-container .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
